<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Uploadity</string>
    <string name="title_home">Konta</string>
    <string name="title_dashboard">Posty</string>
    <string name="choose_photo">Wybierz zdjęcie</string>
    <string name="add_post">Add Post</string>
    <string name="linkedin">Linkedin</string>

    <string name="LINKEDIN_CLIENT_ID">775zx8tdbz37lj</string>
    <string name="LINKEDIN_CLIENT_SECRET">UpNygVsjxoYu96iZ</string>
    <string name="linkedin_access_token_key">linkedin_access_token_key</string>
    <string name="linkedin_id_key">linkedin_id_key</string>
    <string name="tumblr_access_token_key">tumblr_access_token_key</string>
    <string name="tumblr_id_key">tumblr_id_key</string>

    <string name="twitter_access_token_key">twitter_access_token_key</string>
    <string name="twitter_access_token_secret_key">twitter_access_token_secret_key</string>
    <string name="twitter_id_key">twitter_id_key</string>

    <string name="delete">delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="konto">Konto</string>
    <string name="nazwa">Nazwa</string>
    <string name="nazwa_bloga">Nazwa bloga</string>
    <string name="tytu_bloga">Tytuł bloga</string>
    <string name="usu_konto">Usuń konto</string>
    <string name="tytul">Tytuł</string>
    <string name="opis_posta">Opis posta</string>
    <string name="wybierz_konta">Wybierz konta lub blogi</string>
    <string name="brak_polaczonych_kont">Brak połączonych kont</string>
    <string name="anuluj">Anuluj</string>
    <string name="usun">Usuń</string>
    <string name="zapisz">Zapisz</string>
    <string name="opublikuj">Opublikuj</string>
    <string name="opublikowane_posty">Opublikowane posty</string>
    <string name="wersje_robocze">Wersje robocze</string>
    <string name="dodaj_nowe_konto">Dodaj nowe konto</string>
    <string name="lista_kont">Lista kont</string>
    <string name="opublikowano_na">Opublikowano na:</string>
    <string name="usun_post">Usuń post</string>
    <string name="usunieto_na">Usunięto na:</string>
    <string name="aktualizuj">Aktualizuj</string>
    <string name="nazwa_konta">Nazwa konta lub bloga</string>
</resources>