<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditPostAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/baseline_arrow_back_24_white"
            app:titleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="40dp">

            <TextView
                android:id="@+id/titleLabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/nazwa_konta" />

            <TextView
                android:id="@+id/accountNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/descriptionLabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/opis_posta" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLength="3000"
                android:minHeight="50dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/descriptionCharacterCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="end"
                tools:ignore="HardcodedText"
                tools:text="0 / 3000" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_500"
                android:gravity="center"
                android:enabled="false"
                android:text="@string/aktualizuj" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>